@@ -1,6 +1,7 @@
 2010-03-24  6.6.0-9 Glenn Randers-Pehrson <glennrp@image...>
   * coders/png.c: Eliminated support of libpng versions older than 1.0.12.
   * Relocated the new, misplaced png_get_rowbytes() call.
+  * Updated setjmp/longjmp/jmpbuf usage to work with libpng-1.5.
 
 2010-03-21  6.6.0-9 Cristy  <quetzlzacatenango@image...>
   * Windows does not support complex.h (reference
